更改头像图片
Took 4 minutes

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,8 +17,8 @@
 <!-- <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Pacifico|Ubuntu|Roboto+Mono|Source+Sans+Pro" rel="stylesheet"> -->
 
 <!-- Favicon -->
-<link href="/assets/profile.jpeg" rel="shortcut icon" />
-<link href="/assets/profile.jpeg" rel="apple-touch-icon-precomposed" />
+<link href="/assets/profile.png" rel="shortcut icon" />
+<link href="/assets/profile.png" rel="apple-touch-icon-precomposed" />
 <!-- Android Lolipop Theme Color -->
 <!-- <meta name="theme-color" content="#1464FB"> -->
 <title>{{ page.title }}</title>
